Fix navigation align

--- a/css/main.css
+++ b/css/main.css
@@ -41,4 +41,12 @@ hr {
     max-width: 75%;
   }
 
+  h1 {
+    text-align: left;
+  }
+
+  .nav {
+    text-align: right;
+  }
+
 }
